examples/test/testpolicy12704.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12704
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key18: value46
      key23: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value18
          key5: value0
      podSelector:
        matchLabels:
          key11: value30
